syntax="proto3";

package proto;
option go_package = "./;proto";

import "mom_common.proto";

message ProductOrderBomInfo {
	//ID 
	string id=2;
	//项目号 
 	string itemNo=3;
	//物料号 
 	string materialNo=4;
	//物料描述 
 	string materialDescription=5;
	//单件数量 
 	float pieceQTY=6;
	//需求数量 
 	float requireQTY=7;
	//单位 
 	string unit=8;
	//是否管控 
 	bool enableControl=9;
	//管控类型 
 	int32 controlType=10;
	//需求工序 
 	string productionProcess=11;
	//物料仓库 
 	string warehouse=12;
	//创建时间 
 	string createTime=13;
	//创建人员ID 
	string createUserID=14;
	string createUserName=18;
	//备注 
 	string remark=15;
	//隶属工单ID 
	string productOrderID=16;
	string productOrderNo=17;
}

message QueryProductOrderBomRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
	//生产工单号 
    // @inject_tag: uri:"productOrderNo" form:"productOrderNo"
    string productOrderNo=4;
	//物料信息 
    // @inject_tag: uri:"materialNo" form:"materialNo"
    string materialNo=5;
	// @inject_tag: uri:"productOrderID" form:"productOrderID"
	string productOrderID=6;
}

message QueryProductOrderBomResponse{
    Code code=1;
    string message=2;
    repeated ProductOrderBomInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllProductOrderBomResponse{
    Code code=1;
    string message=2;
    repeated ProductOrderBomInfo data=3;
}

message GetProductOrderBomDetailResponse{
    Code code=1;
    string message=2;
    ProductOrderBomInfo data=3;
}